wip: work on the instances endpoints